--- a/data/blogSection.yml
+++ b/data/blogSection.yml
@@ -2,7 +2,7 @@
 enable: false
 topTitle: Blog
 title: >
-  ## Recent Article
+  ## My Journey in Data Science Field
 
   Enjoy team diversity and increase their networks among others people in various fields by provided.
 
