blog update 1 mar25

--- a/data/testimonialSection.yml
+++ b/data/testimonialSection.yml
@@ -8,15 +8,15 @@ testimonial:
   - name: Matt Dancho
     title: Founder, CEO of Business Science University 
     image: "/images/testimonial/matt.jpg"
-    comment: ""
+    comment: "Will be Updated soon"
     star: 5
   - name: Fazil Rasheed
     title: Professor at Conestoga Colege Institue of Technology and Advanced Learning
     image: "/images/testimonial/Fazil.png"
-    comment: ""
+    comment: "will be updated Soon"
     star: 5
   - name: NO Name
     title: TBD
     image: "/images/testimonial/"
-    comment: ""
+    comment: "Will be Added soon"
     star: 5
