blog update 2 mar25

--- a/data/skillSection.yml
+++ b/data/skillSection.yml
@@ -4,7 +4,7 @@ topTitle: My Skills
 content: >
   ## Here's where I can help
 
-  I have a great background in Statistics, solid knowledge in  machine learning and business problem-solving.
+  My Statistics & machine learning background can assist you to solve your business problem(s).
 
 image: images/hero/my_pic.png
 
