--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -6,7 +6,7 @@ title: >
 
   A professional engineer experienced in energy and education sectors.
 content: >
-  ### Mehdi looks for any un-solved porblems or examine new prospective of solved ones to.
+  ### Mehdi looks for any un-solved problems or examine new prospective of solved ones to:
 
   design and present applications that his audience can find the answer pretain to thier input cicumetances.
   These applications should predict, evaluate and eventually render value for end-users.
