--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -20,7 +20,7 @@ experience:
   
       ### Data Science | Analysis
       
-      - Concern about "Global Worming & Polution", collecting, cleaning and visualizing data and applying Machine LEarning Algorithm to Predict the future gas emission/
+      - Concern about "Global Warming & Polution", collecting, cleaning and visualizing data and applying Machine LEarning Algorithm to Predict the future gas emission/
       
       
       - Using tsv data from IMDB Non-comercial website and applying various regression and algorithm to rate the movies based on some major crew of each movie (See [IMDB](https://developer.imdb.com/non-commercial-datasets/))
@@ -39,7 +39,7 @@ experience:
 
       - Designed and analyzed pipe stress for Various Mining and Oil & Gas Projects 
       
-      - Applied codes and standards along wiht CAESAR II and collaborated with various stakeholder.
+      - Applied codes and standards along with CAESAR II and collaborated with various stakeholder.
       
     
     time: 2012-2016
