--- a/data/contactSection.yml
+++ b/data/contactSection.yml
@@ -2,6 +2,6 @@
 enable: true
 topTitle: Contact Mehdi
 title: >
-  ### In order to have a discussion please send you message:
+  ### In order to have a discussion please send your message:
 image: images/hero/my_pic.png
 
