--- a/data/hero.yml
+++ b/data/hero.yml
@@ -12,4 +12,4 @@ buttonIcon: 'fa fa-envelope'
 buttonURL: "#contact"
 image: images/hero/my_pic.png
 videoThumb: images/hero/data-science.gif
-videoURL: https://www.youtube.com/watch?v=rJawNrD3xlU
+videoURL: 
