--- a/data/skillSection.yml
+++ b/data/skillSection.yml
@@ -10,10 +10,14 @@ image: images/hero/my_pic.png
 
 skill:
   - title: R (Tidyverse)
-    percent: 50
-  - title: HTML, CSS (SASS)
-    percent: 50
+    percent: 75
+  - title: R (General)
+    percent: 75
   - title: Shiny/Dash Apps
-    percent: 50
+    percent: 70
   - title: SQL
+    percent: 60
+  - title: Power Query - Power BI
+    percent: 70
+  - title: Python
     percent: 50
