--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -4,7 +4,7 @@ topTitle: My Resume
 title: >
   ## My Experience & Education
 
-  Over 15+ years of experience as a Professional Engineer I am all-in the Data Science / Analysis .
+  Over 15+ years of experience as a Professional Engineer I am all-in the Data Science / Business Analysis .
 
 buttonName: "Download Resume PDF"
 buttonTarget: "/cv/mehdiyazdanian_resume.pdf"
