--- a/data/testimonialSection.yml
+++ b/data/testimonialSection.yml
@@ -20,7 +20,18 @@ Feel free to contact me at mdancho@business-science.io if you have any questions
   - name: Fazil Rasheed
     title: Professor at Conestoga Colege Institue of Technology and Advanced Learning
     image: "/images/testimonial/Fazil.png"
-    comment: "will be updated Soon"
+    comment: "I have enjoyed working closely with Mehdi Yazdanian as an instructor at Conestoga College.
+Mehdi teaches Office Productivity Applications, including Excel, and has even delivered advanced data analysis courses.
+His expertise is commendable, and he goes out of his way to ensure his students grasp complex concepts. 
+What sets Mehdi apart is his continuous learning journey.
+While instructing, he actively expands his knowledge of data science and programming languages such as R and Python.
+His commitment to professional growth is evident through his portfolios.
+Mehdi is not only knowledgeable but also a pleasure to work with.
+He consistently delivers on his responsibilities, demonstrating reliability and a strong work ethic.
+His positive attitude and collaborative approach make them an asset to any institution or company.
+I am confident that Mehdi has a bright future ahead as a data scientist or business analyst.
+His passion for learning and ability to deliver results make him an invaluable team member.
+"
     star: 5
   - name: NO Name
     title: TBD
