--- a/data/testimonialSection.yml
+++ b/data/testimonialSection.yml
@@ -18,7 +18,7 @@ Feel free to contact me at mdancho@business-science.io if you have any questions
 "
     star: 5
   - name: Fazil Rasheed
-    title: Professor at Conestoga Colege Institue of Technology and Advanced Learning
+    title: Professor at Conestoga College - The Institute of Technology and Advanced Learning
     image: "/images/testimonial/Fazil.png"
     comment: "I have enjoyed working closely with Mehdi Yazdanian as an instructor at Conestoga College.
 Mehdi teaches Office Productivity Applications, including Excel, and has even delivered advanced data analysis courses.
