--- a/data/portfolioSection.yml
+++ b/data/portfolioSection.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-topTitle: Data Science Portfolio
+topTitle: Generative AI & Data Science Portfolio
 title: >
   ## Case Studies where I’ve predicted future outcomes and rating results
   
