--- a/data/testimonialSection.yml
+++ b/data/testimonialSection.yml
@@ -33,8 +33,8 @@ I am confident that Mehdi has a bright future ahead as a data scientist or busin
 His passion for learning and ability to deliver results make him an invaluable team member.
 "
     star: 5
-  - name: NO Name
-    title: TBD
+  - name: Abbasali Assadian
+    title: CEO at Arona-Chemie Co.
     image: "/images/testimonial/"
     comment: "Will be Added soon"
     star: 5
