march 24 at 8:45pm update

--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -28,6 +28,7 @@ experience:
       
       
       - Applied advanced statistical methods, such as regression analysis, to evaluate the effect of various feed compositions on livestock performance.
+    time: 2020-Present
   - content: >
       ### College Part-time Instructor
       
