march 24 8:47pm update

--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -28,7 +28,7 @@ experience:
       
       
       - Applied advanced statistical methods, such as regression analysis, to evaluate the effect of various feed compositions on livestock performance.
-    time: 2020-Present
+    time: 2020-
   - content: >
       ### College Part-time Instructor
       
