March 24 at 8:49 update

--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -28,14 +28,14 @@ experience:
       
       
       - Applied advanced statistical methods, such as regression analysis, to evaluate the effect of various feed compositions on livestock performance.
-    time: 2020-
+    time: 2020 - Present
   - content: >
       ### College Part-time Instructor
       
       ##### Conestoga College
 
       - Teaching Microsoft applications to 1000+ students
-    time: 2019-2024
+    time: 2019 - 2024
   - content: >
       ### Mechanical/Piping Engineer | Pipe Stress Analyst
 
@@ -46,7 +46,7 @@ experience:
       - Applied codes and standards along with CAESAR II and collaborated with various stakeholder.
       
     
-    time: 2012-2016
+    time: 2012 - 2016
   
 
 
