1st march 24 2025 at 3:15 pm

--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -9,8 +9,9 @@ content: >
   ### Mehdi specializes in developing and deploying generative models (such as LLMs)
   to create text or other AI-generated content.
 
-  He trains and optimizes models, engineeering effective prompts, and implementing
-  retrieval-augmented generation (RAG) system to enhance output quality. 
+  He trains and optimizes models, engineering effective prompts, and implementing
+  retrieval-augmented generation (RAG) system to enhance output quality. He assists your organization by 
+  automating much of the lower-level business analytics logic.
 button1Name: LinkedIn
 button2Name: Download CV
 button1Target: https://www.linkedin.com/in/mehdiyazdanian/
