march 25 2025 at 3:59 pm

--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-topTitle: Generative AI Data Scientist
+topTitle: AI-Powered Data Scientist
 content: >
   ## Hi my name is Mehdi
 
